--- a/iQUiz/iQUiz/Base.lproj/Main.storyboard
+++ b/iQUiz/iQUiz/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rj8-1t-q9c">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
@@ -31,6 +31,7 @@
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="botaoPressionado:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7o6-QR-LYS"/>
+                                    <segue destination="suO-aJ-iWo" kind="show" id="1L4-G1-Ob7"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -45,11 +46,46 @@
                             <constraint firstItem="9mc-nL-Edw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lce-l5-wP7"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="qwp-bC-8Vl"/>
                     <connections>
                         <outlet property="botaoIniciarQuiz" destination="kYw-ID-TG8" id="CKO-Lk-Ye0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="813" y="-35"/>
+        </scene>
+        <!--Questao View Controller-->
+        <scene sceneID="iee-L4-Jjo">
+            <objects>
+                <viewController id="suO-aJ-iWo" customClass="QuestaoViewController" customModule="iQUiz" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="T7m-qe-FqY">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="kLb-d2-z6p"/>
+                        <color key="backgroundColor" red="0.32156862749999998" green="0.1176470588" blue="0.76078431369999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="tFN-iE-Cuj"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O5F-lW-xgS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1521" y="-35"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Yga-Te-0YH">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rj8-1t-q9c" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2xO-Rm-K64">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Imf-ZP-YpB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oSQ-en-aYo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="54.198473282442748" y="-34.507042253521128"/>
         </scene>
