--- a/iQUiz/iQUiz/Base.lproj/Main.storyboard
+++ b/iQUiz/iQUiz/Base.lproj/Main.storyboard
@@ -80,6 +80,9 @@
                                 <buttonConfiguration key="configuration" style="plain" title="Resposta 01">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="22"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="respostaBotaoPressionado:" destination="suO-aJ-iWo" eventType="touchUpInside" id="vY6-gg-5xX"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pZI-KD-9uC">
                                 <rect key="frame" x="64" y="420" width="265" height="62"/>
@@ -124,6 +127,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="tFN-iE-Cuj"/>
+                    <connections>
+                        <outlet property="tituloQuestaoLabel" destination="xsj-Fu-CWb" id="473-aW-FbW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O5F-lW-xgS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
