--- a/iQUiz/iQUiz/Base.lproj/Main.storyboard
+++ b/iQUiz/iQUiz/Base.lproj/Main.storyboard
@@ -95,6 +95,9 @@
                                 <buttonConfiguration key="configuration" style="plain" title="Resposta 02">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="22"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="respostaBotaoPressionado:" destination="suO-aJ-iWo" eventType="touchUpInside" id="U3I-aL-AwK"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KXk-g1-oyE">
                                 <rect key="frame" x="64" y="514" width="265" height="62"/>
@@ -107,6 +110,9 @@
                                 <buttonConfiguration key="configuration" style="plain" title="Resposta 03">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="22"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="respostaBotaoPressionado:" destination="suO-aJ-iWo" eventType="touchUpInside" id="DJl-Sg-i2g"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="kLb-d2-z6p"/>
